# payments_prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: build_and_deploy.yml
api/: forecast.py
data/processed/: credit.csv  prepared_debit.csv
data/raw/: test_credit.csv  test_debit.csv  train_credit.csv  train_debit.csv
models/: credit_forecaster.py  debit_forecaster.py
src/data/: __init__.py  make_credit_dataset.py  make_dataset.py  make_train_test.py
src/models/: __init__.py  predict_credit_model.py  predict_model.py  train_credit_model.py  train_model.py
src/visualization/: __init__.py  visualize.py
