[tool.poetry]
name = "gulf-score"
version = "0.1.0"
description = ""
authors = ["beck"]
readme = "README.md"
packages = [{include = "gulf_score"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
prophet = "^1.1.2"
statsmodels = "^0.13.5"
pmdarima = "^2.0.3"
openpyxl = "^3.1.2"
lightgbm = "^3.3.5"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
